# test-with-rust

./: Cargo.toml  LICENSE  build.rs
.cargo/: config.toml
bindings/: app_example.rs  lib_example.rs  util_example.rs
mocks/: mock_lib_example.rs  mock_util_example.rs
spec/: util_example.toml
tests/: test_app_example.rs  test_util_example.rs
